# fdtd

./: .gitignore  activate_fdtd.sh  git-update.sh
fdtd2d/: CMakeLists.txt
fdtd2d/include/: FDTD2D.h  OutputManager.h
fdtd2d/scripts/: viz_fdtd2d.py
fdtd2d/src/: FDTD2D.cpp  OutputManager.cpp  main_2d.cpp
fdtd3d/: CMakeLists.txt  run.sh  run_viz.sh
fdtd3d/include/: FDTD3D.h  OutputManager.h
fdtd3d/scripts/: diagnose_energy.py  quick_check.py  verify_vti.py  visualize_slices.py
fdtd3d/src/: FDTD3D.cpp  OutputManager.cpp  main_3d.cpp
